Fixes double border issue

--- a/src/components/action-drawer/ActionDrawer.module.css
+++ b/src/components/action-drawer/ActionDrawer.module.css
@@ -42,7 +42,7 @@
 }
 
 .actionIcon {
-  min-width: 35px;
+  min-width: 44px;
   display: inline-flex;
 }
 
